--- a/styles.css
+++ b/styles.css
@@ -34,23 +34,6 @@ ol {
     list-style-type: upper-roman;
 }
 
-.img {
-    padding-left: 10px;
-}
-
-.side {
-    width: 200px;
-    height: 200px;
-    display: inline-block;
-    margin-left: 100px;
-    margin-right: 100px;
-}
-
-.center {
-    width: 480px;
-    display: inline-block;
-}
-
 .we {
     display: flex;
     flex-wrap: wrap;
@@ -63,7 +46,19 @@ ol {
 
 .img-div {
     width: auto;
-    height: 300px;
+    max-height: 300px;
+    display: flex;
+    justify-content: center;
+    flex-basis: 600px;
 }
 
-.fe {}
+.wa {
+    display: flex;
+    outline: 2px solid blue;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.wa div {
+    outline: 2px solid green;
+}
